added html skeleton and text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </a>
       <nav>
         <ul>
-          <li class="active">
+          <li class="nav-active">
             <a href="#">Home</a>
           </li>
           <li>
@@ -48,33 +48,44 @@
       <div class="container">
         <div id="home-intro">
           <p>
+            Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine.
+            Node.js uses an event-driven, non-blocking I/O model that makes it lightweight
+            and efficient. Node.js' package ecosystem, npm, is the largest ecosystem of
+            open source libraries in the world.
           </p>
           <p class="home-banner">
-            <a href="#"></a>
+            <a href="#">
+              Spectre and Meltdown in the context of Node.js.
+            </a>
           </p>
           <p id="home-dowloadHead">
+            Download for macOS (x64)
           </p>
-          <div class="dowloadBlock">
-            <a href="#"></a>
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
+          <div class="home-dowloadBlock">
+            <a href="#">8.9.4 LTS<br>
+              Recommended for all users.
+            </a>
+            <ul class="home-devider">
+              <li>Other dowloads</li>
+              <li>Changelog</li>
+              <li>API Docs</li>
             </ul>
           </div>
-          <div class="dowloadBlock">
-            <a href="#"></a>
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
+          <div class="home-dowloadBlock">
+            <a href="#">9.5.0 Current<br>
+            Latest features</a>
+            <ul class="home-devider">
+              <li>Other dowloads</li>
+              <li>Changelog</li>
+              <li>API Docs</li>
             </ul>
           </div>
-          <p>
-            <a href="#"></a>
+          <p>Or have a look at the
+            <a href="#">LTS schedule.</a>
           </p>
-          <p>
-            <a href="#"></a>
+          <p>Sign up for
+            <a href="#">Node.js Everywhere</a>
+            , the official Node.js Weekly Newsletter.
           </p>
         </div><!--end of home-intro-->
       </div><!--end of container-->
@@ -83,18 +94,18 @@
     <footer>
       <div class="container">
         <div class="linux">
-          <a href="#">Linux</a>
+          <a href="#">LINUX FOUNDATION COLLABORATIVE PROJECTS</a>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Report Node.js issue</li>
+            <li>Report website issue</li>
+            <li>Get help</li>
           </ul>
-        </div><!--end oof Linux-->
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        </div><!--end of Linux-->
+        <p>© 2018 Node.js Foundation. All Rights Reserved. Portions of this site originally © 2018 Joyent.</p>
+        <p>Node.js is a trademark of Joyent, Inc. and is used with its permission. Please review the Trademark Guidelines of the Node.js Foundation.</p>
+        <p>Linux Foundation is a registered trademark of The Linux Foundation.</p>
+        <p>Linux is a registered trademark of Linus Torvalds.</p>
+        <p>Node.js Project Licensing Information.</p>
       </div><!--end of container-->
     </footer>
   </body>
